--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@
     --secondary-web-color: #52C5FB;
     --font-btn-color: #1C1C1F;
     --footer-color: #161616;
+    --secondary-font-color: #DADEF7;
 }
 
 *{
@@ -29,6 +30,13 @@ body{
     padding-left: 25px;
     padding-right: 25px;
     margin: 0 auto;
+}
+
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-basis: 50%;
 }
 
 /* ************ NAVBAR START ************* */
@@ -115,6 +123,44 @@ nav .list-and-btn .ide-btn:active{
 
 #hero{
     background: linear-gradient(to bottom right, var(--primary-web-color), var(--secondary-web-color));
+}
+
+.hero-div .hero-info-div h1{
+    font-size: 50px;
+    color: #fff;
+    line-height: 3.5rem;
+    margin-bottom: 20px;
+}
+
+.hero-div .hero-info-div p{
+    color: var(--secondary-font-color);
+    margin-bottom: 40px;
+    font-size: 17px;
+    font-weight: 500;
+}
+
+.hero-div .hero-info-div a{
+    padding: 15px 40px;
+    background-color: var(--font-btn-color);
+    color: #fff;
+    border-radius: 50px;
+    font-weight: 600;
+    font-size: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    transition: all 0.5s ease;
+}
+
+.hero-div .hero-info-div a:hover{
+    color: var(--font-btn-color);
+    background-color: #fff;
+}
+
+.hero-div .hero-img-div{
+    width: 1800px;
+}
+
+.hero-div .hero-img-div img{
+    width: 100%;
 }
 
 /* ************* HERO SECTION END *************** */
