--- a/CSS/style.css
+++ b/CSS/style.css
@@ -255,6 +255,55 @@ nav .list-and-btn .ide-btn:active{
 #testimonials{
     padding-block: 80px;
 }
+
+#testimonials h2{
+    font-size: 50px;
+    color: var(--font-btn-color);
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+#testimonials .testimonials-section .rev-div{
+    margin-inline: 20px;
+    cursor: pointer;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    border-radius: 50px 0 50px 0;
+    padding: 20px 30px;
+    transition: all 0.5s ease;
+}
+
+#testimonials .testimonials-section .rev-div:hover{
+    transform: translateY(-20px);
+}
+
+#testimonials .testimonials-section .rev-div .cus-img-info{
+    margin-inline: 10px;
+}
+
+#testimonials .testimonials-section .cus-img{
+    width: 200px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+#testimonials .testimonials-section .cus-img img{
+    width: 100%;
+    height: 100%;
+}
+
+#testimonials .testimonials-section .cus-rev p{
+    font-size: 13px;
+    line-height: 1.1rem;
+    font-style: italic;
+    color: var(--font-btn-color);
+}
+
+#testimonials .testimonials-section .cus-rev p span{
+    font-weight: 600;
+    font-size: 13px;
+}
 /* ************** TESTIMONIAL SECTION END ************ */
 
 
