--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,8 +48,8 @@ body{
 #navbar{
     padding-block: 25px;
     background-color: #fff;
-    position: fixed;
-    top: 0;
+    /* position: fixed;
+    top: 0; */
     z-index: 9;
     width: 100%;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
